@@ -1,4 +1,6 @@
 3.4
+	+ Give support to custom actions without image. Those actions will
+	  not appear in the legend.
 	+ Added to findValueMultipleFields and findValue the nosync parameter
 	+ Added support for haproxy 1.5
 	+ Moved nginx to listen on localhost
